Final poster sizing adjustments: prevent clipping on desktop/landscape, flip mobile portrait to 60/40 split

--- a/docs/input.css
+++ b/docs/input.css
@@ -110,14 +110,14 @@
   /* Portrait mode poster sizing */
   @media (orientation: portrait) {
     .swiper-slide .relative {
-      height: 35% !important;
+      height: 60% !important;
     }
   }
   
   /* Landscape mode poster sizing */
   @media (orientation: landscape) {
     .swiper-slide .w-2\/5 {
-      width: 35% !important;
+      width: 32% !important;
     }
   }
 }
@@ -141,7 +141,7 @@
   
   /* Desktop poster sizing */
   .swiper-slide .w-2\/5 {
-    width: 30% !important;
+    width: 28% !important;
   }
 }
 
